--- a/Assets/Scripts/Game.asmdef
+++ b/Assets/Scripts/Game.asmdef
@@ -4,9 +4,12 @@
     "references": [
         "GUID:d1050c9daa72ed24bb071b02b39980cc",
         "GUID:fd47c8dedf2c5dc4ca2636cea400ccf5",
-        "GUID:f2558e54d959d0b419313258d9dbdca1"
+        "GUID:f2558e54d959d0b419313258d9dbdca1",
+        "GUID:6055be8ebefd69e48b49212b09b47b2f"
     ],
-    "includePlatforms": [],
+    "includePlatforms": [
+        "Editor"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
